test/files/neg/bug432.check
bug432.scala:2: error: Tata is already defined as object Tata
object Tata
       ^
one error found
